--- a/index.html
+++ b/index.html
@@ -11,62 +11,69 @@
 </head>
 
 <body>
-    <h1 class="heading">Age Calculator</h1>
-    <hr class="firstline">
-    <div class="box1">
-        <h2 class="title">Date Of Birth</h2>
-        <select name="date" id="date">
-            <option value="01">01</option>
-            <option value="02">02</option>
-            <option value="03">03</option>
-            <option value="04">04</option>
-            <option value="05">05</option>
-            <option value="06">06</option>
-            <option value="07">07</option>
-            <option value="08">08</option>
-            <option value="09">09</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-            <option value="31">31</option>
-        </select>
-        <select name="month" id="month">
-            <option value=""selected disabled>Month</option>
-            <option value="january">Jan</option>
-            <option value="february">Feb</option>
-            <option value="march">Mar</option>
-            <option value="april">Apr</option>
-            <option value="may">May</option>
-            <option value="june">Jun</option>
-            <option value="july">July</option>
-            <option value="august">Aug</option>
-            <option value="september">Sep</option>
-            <option value="october">Oct</option>
-            <option value="november">Nov</option>
-            <option value="december">Dec</option>
-        </select>
-        <input type="text" placeholder="year"name="year" id="year">
-            <button onclick="calculateAge">Calculate</button>
+    <div class="main">
+        <h1 class="heading">Age Calculator</h1>
+        <div class="box1">
+            <div class="titlediv">
+                <h2 class="title">Date Of Birth</h2>
+            </div>
+            <div class="fill">
+                <select name="date" id="date">
+                    <option value="01">01</option>
+                    <option value="02">02</option>
+                    <option value="03">03</option>
+                    <option value="04">04</option>
+                    <option value="05">05</option>
+                    <option value="06">06</option>
+                    <option value="07">07</option>
+                    <option value="08">08</option>
+                    <option value="09">09</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                    <option value="12">12</option>
+                    <option value="13">13</option>
+                    <option value="14">14</option>
+                    <option value="15">15</option>
+                    <option value="16">16</option>
+                    <option value="17">17</option>
+                    <option value="18">18</option>
+                    <option value="19">19</option>
+                    <option value="20">20</option>
+                    <option value="21">21</option>
+                    <option value="22">22</option>
+                    <option value="23">23</option>
+                    <option value="24">24</option>
+                    <option value="25">25</option>
+                    <option value="26">26</option>
+                    <option value="27">27</option>
+                    <option value="28">28</option>
+                    <option value="29">29</option>
+                    <option value="30">30</option>
+                    <option value="31">31</option>
+                </select>
+                <select name="month" id="month">
+                    <option value="" selected disabled>Month</option>
+                    <option value="january">Jan</option>
+                    <option value="february">Feb</option>
+                    <option value="march">Mar</option>
+                    <option value="april">Apr</option>
+                    <option value="may">May</option>
+                    <option value="june">Jun</option>
+                    <option value="july">July</option>
+                    <option value="august">Aug</option>
+                    <option value="september">Sep</option>
+                    <option value="october">Oct</option>
+                    <option value="november">Nov</option>
+                    <option value="december">Dec</option>
+                </select>
+                <input type="text" placeholder="year" name="year" id="year">
+            </div>
+            <button onclick="calculateAge()">Calculate</button>
+        </div>
+        <div id="show_result">
+
+        </div>
     </div>
-   
 </body>
 
 </html>
