--- a/index.html
+++ b/index.html
@@ -51,21 +51,7 @@
                     <option value="30">30</option>
                     <option value="31">31</option>
                 </select>
-                <select name="month" id="month">
-                    <option value="" selected disabled>Month</option>
-                    <option value="january">Jan</option>
-                    <option value="february">Feb</option>
-                    <option value="march">Mar</option>
-                    <option value="april">Apr</option>
-                    <option value="may">May</option>
-                    <option value="june">Jun</option>
-                    <option value="july">July</option>
-                    <option value="august">Aug</option>
-                    <option value="september">Sep</option>
-                    <option value="october">Oct</option>
-                    <option value="november">Nov</option>
-                    <option value="december">Dec</option>
-                </select>
+                <input type="text" name="month" id="month" placeholder="mm" required="required" />
                 <input type="text" placeholder="year" name="year" id="year">
             </div>
             <button onclick="calculateAge()">Calculate</button>
